opam-version: "2.0"
maintainer:   "Cuihtlauac Alvarado <cuihtauac@tarides.com>"
authors:      "Cuihtlauac Alvarado <cuihtauac@tarides.com>"
synopsis:     "Store Bitcoin transaction graph data from BlockSci CSV exports into Irmin"
homepage:     "https://github.com/tarides/irmin-blocksci"
bug-reports:  "https://github.com/tarides/irmin-blocksci/issues"
license:      "ISC"
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.0"}
  "lwt_eio"
  "index"
  "irmin-watcher"
  "eio"
  "eio_main"
  "irmin"
  "irmin-pack"
  "csv"
  "cmdliner"
  "ppx_irmin"
  "graphql-lwt"
  "cohttp-lwt-unix"
  "odoc" {with-doc}
]

pin-depends: [
  [ "index.dev" "git+https://github.com/mirage/index#6e84bed48db8ab53a09926b45d899815c30f2b39" ]
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
  [ "ppx_irmin.dev" "git+https://github.com/mirage/irmin#eio" ]
  [ "irmin.dev" "git+https://github.com/mirage/irmin#eio" ]
  [ "irmin-pack.dev" "git+https://github.com/mirage/irmin#eio" ]
]
